Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -45,6 +45,7 @@ header.bk-header {
     display: block;
     float: left;
     padding: 0;
+    width: 25%;
 }
 
 /* COMPANY NAME */
@@ -105,10 +106,9 @@ footer.bk-footer {
     &.extendednavigation {
         float: right;
         position: relative;
-        max-width: 691px;
+        width: 75%;
         margin: 4px 0;
         ul {
-            float: left;
             margin: 0;
             padding: 0;
             li {
